--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,19 +6,21 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="title_activity_main">Main</string>
-
+    <string name="httpDownload">com.ranapromo.nara.ranapromo3.fmk.impl.HttpDownloadService</string>
     <string name="title_section1">Home</string>
     <string name="title_section2">Promotions</string>
-    <string name="title_section3">Trending</string>
+    <string name="title_section3">Trending </string>
     <string name="title_section4">Marque</string>
     <string name="title_section5">Mes favories</string>
     <string name="title_section6">Mon compte</string>
     <string name="title_section7">Aide</string>
     <string name="title_section8">A propo</string>
-
+    <string name="server_base_url">http://192.168.1.4/test/uploads/</string>
+    <!--string name="server_base_url">http://mydomapp.tk/test/uploads/</string-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="server_url">http://192.168.1.4/test/</string>
+    <!--string name="server_url">http://mydomapp.tk/test/</string-->
     <string name="action_example">Example action</string>
     <string name="action_search">SearchBar</string>
     <string name="title_activity_marque">MarqueActivity</string>
@@ -56,5 +58,4 @@
         format prise casque	Jack 3.5 mm \n
     </string>
     <string name="title_activity_favorie">Vos favorie</string>
-    <string name="title_activity_splash">SplashActivity</string>
 </resources>
