--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,12 @@
     <string name="title_section6">Mon compte</string>
     <string name="title_section7">Aide</string>
     <string name="title_section8">A propo</string>
-    <!--string name="server_base_url">http://192.168.1.4/test/uploads/</string-->
-    <string name="server_base_url">http://mydomapp.tk/test/uploads/</string>
+    <string name="server_base_url">http://192.168.1.4/test/uploads/</string>
+    <!--string name="server_base_url">http://mydomapp.tk/test/uploads/</string-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <!--string name="server_url">http://192.168.1.4/test/</string-->
-    <string name="server_url">http://mydomapp.tk/test/</string>
+    <string name="server_url">http://192.168.1.4/test/</string>
+    <!--string name="server_url">http://mydomapp.tk/test/</string-->
     <string name="action_example">Example action</string>
     <string name="action_search">SearchBar</string>
     <string name="title_activity_marque">MarqueActivity</string>
